<?xml version="1.0" encoding="utf-8"?>
<!-- Относительное выравнивание, используется весь экран
     и фоновая картинка "background1" -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background1">

    <!-- Выравнивание от верхнего края экрана (android:layout_alignParentTop="true")
         по-центру по-горизонтали (android:gravity="center")
         c наклоном текста в 4 градуса (android:rotation="4"),
         желтым цветом (android:textColor="#F2E70E")
         и 36 относительным размером android:textSize="36sp" -->

    <!-- Выравнивание ниже компонента "textView" (android:layout_below="@+id/textView")
         по-центру по-горизонтали (android:gravity="center"), размер 20 букв "M" -->

    <!-- Выравнивание ниже компонента "editText" (android:layout_below="@+id/editText")
         по-центру по-горизонтали (android:gravity="center")
         большим шрифтом (android:textAppearance="?android:attr/textAppearanceLarge")
         c жирностью и наклоном (android:textStyle="bold|italic") -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:rotation="0"
        android:text="Описание вашего смартфона"
        android:textColor="#00FFE2"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/ваш_фио"
        android:textColor="#00FFE2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:gravity="center"
        android:text="@string/os"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00FFE2"

        android:textStyle="italic" />

    <!-- Выравнивание ниже компонента "textView2" (android:layout_below="@+id/textView2") -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="@string/ios"
        android:textColor="#00FFE2"
        android:textSize="17sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:text="@string/android"
        android:textColor="#00FFE2"
        android:textSize="17sp" />

    <!-- Выравнивание ниже компонента "checkBox" (android:layout_below="@+id/checkBox")
         по-центру по-горизонтали (android:gravity="center")
         средним размером (android:textAppearance="?android:attr/textAppearanceMedium") -->

    <!-- Выравнивание ниже компонента "textView3" (android:layout_below="@+id/textView3") -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <!-- Выравнивание ниже компонента "radioGroup" (android:layout_below="@+id/radioGroup")
         по-центру по-горизонтали (android:gravity="center")
         маленьким размером (android:textAppearance="?android:attr/textAppearanceSmall") -->

    <!-- Выравнивание ниже компонента "textView4" (android:layout_below="@+id/textView4") -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="290dp"
        android:gravity="center"
        android:text="@string/бренд"
        android:textColor="#00FFE2"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:background="#00FFE2"
        android:entries="@array/country_arrays" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:onClick="onBack"
        android:textSize="14sp"
        android:text="@string/Назад"/>

    <!-- Выравнивание по нижней границы окна (android:layout_alignParentBottom="true") -->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onInfo"
        android:text="@string/Вперед"/>


</RelativeLayout>